fix: z-index em menu e page

--- a/src/components/MenuLateral/MenuLateral.module.css
+++ b/src/components/MenuLateral/MenuLateral.module.css
@@ -9,8 +9,9 @@
     position: fixed;
     top: 0;
     bottom: 0;
-    transition: all 0.25s ease;
+    transition: width 0.25s ease-in-out;
     overflow: hidden;
+    z-index: 2;
 }
 
 .link, .logOut{
@@ -44,4 +45,5 @@
 
 .menu:hover{
     width: 150px;
+    transition: all 0.25s ease-in-out;
 }
