--- a/src/components/PageTemplate/PageTemplate.module.css
+++ b/src/components/PageTemplate/PageTemplate.module.css
@@ -3,6 +3,7 @@
     padding-bottom: 56px;
     height: 100%;
     width: 100%;
+    z-index: 1;
 }
 
 .bar {
