--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,8 @@ body {
   display: flex;
   place-items: center;
   min-height: 100vh;
+  min-width: 100vw;
   overflow-x: hidden;
-  zoom: 1;
 }
 
 .flex-column {
@@ -38,8 +38,8 @@ body {
 }
 
 .fullScreen {
-  height: 100vh;
-  width: 100vw;
+  height: 100vw;
+  min-width: 100vw;
 }
 
 .flex-row {
